Updated for Generators
In this commit I found an issue with Native references to String bound
classes from generators. The class and any dependencies were left out.
UUID generated values are important for data source agnostic generation
and more appropriate for cloud based data sources or distributed,
multi-master data sources.